hphp/hack/test/typecheck/dynamic_calls/dynamically_callable_reified2.php.exp
File "dynamically_callable_reified2.php", line 5, characters 5-25:
`__DynamicallyCallable` cannot be used on reified functions or methods (NastCheck[3089])
