hphp/hack/test/typecheck/dynamic_calls/dynamically_callable_reified2.php
<?hh

class Foo {

  <<__DynamicallyCallable>>
  public function test<reify T>(): void {}
}
